--- a/jekyll/_includes/lang_picker.html
+++ b/jekyll/_includes/lang_picker.html
@@ -25,7 +25,7 @@
 
     <div class="lang-dropdown">
       <a id="globalNavLang-en" class="lang-option">
-        <span class='select-lang-wrap no-display'>
+        <span class='select-lang-wrap not-visible'>
           <img id='select-lang-en' src="{{ site.baseurl }}/assets/img/docs/greenCheck.svg">
         </span>
         <span>English</span>
@@ -33,7 +33,7 @@
       </a>
 
       <a id="globalNavLang-ja" class="lang-option">
-        <span class='select-lang-wrap no-display'>
+        <span class='select-lang-wrap not-visible'>
           <img id='select-lang-ja' src="{{ site.baseurl }}/assets/img/docs/greenCheck.svg">
         </span>
         <span>日本語</span>
