--- a/src/styles/_langselector.scss
+++ b/src/styles/_langselector.scss
@@ -63,6 +63,8 @@ $nav-bg: #F3F3F3 !default;
   .lang-dropdown {
     width: 168px;
     margin-top: 4px;
+    position: relative;
+    left: 3px;
   }
 
   .lang-option {
@@ -70,7 +72,7 @@ $nav-bg: #F3F3F3 !default;
     color: $black;
     margin: 4px 0px;
     margin-top: 0px;
-    padding: 4px 20px;
+    padding: 4px 0px;
     font-size: 15px;
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 18px;
@@ -89,7 +91,7 @@ $nav-bg: #F3F3F3 !default;
     }
     .select-lang-wrap {
       color: $btn-outer-green;
-      padding-right: 3px;
+      padding: 0 3px;
       @media (max-width: $screen-xs-max) {
         display: none;
       }
